# rpview

./: .gitignore  .install-bin.toml  .publish-bin.toml  CHANGELOG.md  CLI.md  CONTRIBUTING.md  CROSS_PLATFORM.md  Cargo.toml  DESIGN.md  ICO_CRATE_SECURITY_REVIEW.md  ICO_CREATION.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  PHASE1_SUMMARY.md  PHASE_12_COMPLETE.md  README.md  RELEASE_NOTES_TEMPLATE.md  RESVG_REVIEW.md  TODO.md  WINRESOURCE_CRATE_SECURITY_REVIEW.md  animation_test.rs  build.rs  migrating-to-longbridge-compatible-gpui.md  set-cargo-target-dir.cmd  windows-env-setup.cmd
.cargo/: audit.toml
.claude/: README.md  settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: ANIMATION_IMPLEMENTATION.md  COMPONENTS.md  CROSS_PLATFORM.md  DRAG_DROP_RESEARCH.md  FILTER_ARCHITECTURE.md  FILTER_SYSTEM_DESIGN.md  GPUI_ASYNC_RENDERING_PATTERNS.md  GPUI_IMAGE_RENDERING.md  GPUI_IMAGE_RENDERING_NOTES.md  GPUI_SCROLLBARS.md  GPUI_SLIDER_IMPLEMENTATION.md  GPU_TEXTURE_PRELOADING.md  SETTINGS.md  SETTINGS_DESIGN.md  SETTINGS_STATUS.md  TESTING.md  TROUBLESHOOTING.md  gpui-image-display-research.md  local-contrast-spec.md
packaging/: ICONS.md
packaging/linux/: install.sh  rpview.desktop
packaging/macos/: Info.plist  bundle.sh  create-dmg.sh  create-icon.sh  rpview.entitlements  rpview.icns
packaging/windows/: rpview.iss
src/: app_handlers.rs  app_keybindings.rs  app_render.rs  cli.rs  error.rs  lib.rs  macos_open_handler.rs  main.rs  window_title.rs
src/components/: README.md  (+17 more)
test_images/: rust-logo.tiff
tests/: file_operations_test.rs  filter_test.rs  integration_test.rs  settings_atomic_test.rs  state_management_test.rs  zoom_pan_test.rs
(+44 files in other folders)
