[package]
name = "rpview-gpui"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
# smallvec is included here for convenience, it is used by gpui when creating
# components that can have children. uncomment this line or
# use `cargo add smallvec` to add it to your project
#smallvec = "1.13.2"
