[package]
name = "rpview-gpui"
version = "0.1.0"
edition = "2024"
authors = ["rpview contributors"]
description = "A fast, cross-platform image viewer built with GPUI"
readme = "README.md"
homepage = "https://github.com/ComposerChrisF/rpview"
repository = "https://github.com/ComposerChrisF/rpview"
license = "MIT OR Apache-2.0"
keywords = ["image", "viewer", "gpui", "cross-platform"]
categories = ["multimedia::images", "gui"]

[dependencies]
gpui = "0.2.2"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", features = ["png", "jpeg", "bmp", "gif", "tiff", "ico", "webp"] }
adabraka-ui = "0.2.3"
rfd = "0.15"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# smallvec is included here for convenience, it is used by gpui when creating
# components that can have children. uncomment this line or
# use `cargo add smallvec` to add it to your project
#smallvec = "1.13.2"

[dev-dependencies]
tempfile = "3.8"

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]

[target.'cfg(target_os = "linux")'.dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[[bin]]
name = "rpview"
path = "src/main.rs"
